<resources>
    <!-- API key I generated - will cancel later-->
    <string name="google_API_key">AIzaSyBdMBkmG-cxqS4EnTsEKMfM7QgkBoRh0-U</string>

    <!-- Main Activity String Resources -->
    <string name="app_name">Carpool_Ride_Share_App</string>
    <string name="welcome_text">Welcome!</string>

    <!-- Registration String Resources -->
    <string name="login">Sign In</string>
    <string name="email">Enter Email</string>
    <string name="pw">Enter Password</string>
    <string name="logout">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="register">Register</string>
    <string name="signed_out">Not Signed In!</string>
    <string name="auth_failed">Authentication Failed!</string>
    <string name="text_hello">Hello there!</string>
    <string name="create_chat_room">Create a Chat Room!</string>
    <string name="remove_chat_room">Remove Chatroom</string>
    <string name="choose_avatar">Choose an Avatar!</string>
    <string name="copyright">\u00A9 Copyright Group 4 Inc.</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Sign In</string>
    <string name="Start">Click Here to Start!</string>
    <string name="password">Password</string>
    <string name="email_registration">Email Registration</string>
    <string name="confirm_password">Confirm Password</string>

    <!-- Chat Room Activity -->
    <string name="collection_users">Users</string>
    <string name="collection_chatrooms">Chatrooms</string>
    <string name="collection_chat_messages">Chat Messages</string>
    <string name="collection_chatroom_user_list">User List and Map</string>
    <string name="collection_user_locations">User Locations</string>

    <!-- Intent extras -->
    <string name="intent_chatroom">intent_chatroom</string>
    <string name="intent_user_list">intent_user_list</string>
    <string name="intent_user_locations">intent_user_locations</string>
    <string name="intent_chatroom_list">intent_chatroom_list</string>
    <string name="intent_chatroom_locations">intent_chatroom_locations</string>
    <string name="intent_location">intent_location</string>

    <!-- Service and Broadcasts -->
    <string name="gps_location">gps_location</string>

    <!-- Fragments Names -->
    <string name="fragment_user_list">User List and Map</string>
    <string name="fragment_image_list">Image List</string>

    <!-- Driver or Passenger -->
    <string name="driver">Driver</string>
    <string name="passenger">Passenger</string>

    <!-- Other Strings -->
    <string name="action_create_chatroom">Create Chatroom</string>
    <string name="find_me">Find Me on Map!</string>
    <string name="action_leave_chatroom">Leave chatroom</string>
    <string name="action_chatroom_user_list">User list and Map</string>
    <string name="action_profile">Profile</string>
    <string name="wb">Welcome Back!</string>
    <string name="passener_driver">Please select if you are a Passenger or a Driver.</string>
    <string name="show_chatrooms">Show Chatrooms</string>
</resources>
