<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SplashScreenActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="327dp"
        android:layout_height="47dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="483dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="188dp"
        android:width="120sp"
        android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
        android:backgroundTint="#E2FFFFFF"
        android:fontFamily="@font/stint_ultra_expanded"
        android:onClick="openApp"
        android:text="@string/Start"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/stock_bg_login" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="283dp"
        android:layout_height="63dp"
        android:fontFamily="@font/stint_ultra_expanded"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textColor="#D8FFFFFF"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:textAlignment="textStart"
        android:textColor="#CDFCFCFC"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.908" />

</androidx.constraintlayout.widget.ConstraintLayout>